--- a/Proyect Java Spring Boot Tomcat/airline-rest-server/pom.xml
+++ b/Proyect Java Spring Boot Tomcat/airline-rest-server/pom.xml
@@ -2,11 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>product-rest-server</artifactId>
+    <artifactId>airline-rest-server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -44,17 +43,9 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-            <version>${spring.boot.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-core</artifactId>
-            <version>10.1.18</version>
-        </dependency>
+
     </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
